# wasm-libc

./: CMakeLists.txt
.github/workflows/: build.yml
cmake/toolchains/: wasm.toolchain.cmake
